# AutoRCA_Dashboard

./: .env  .gitignore  Autorca_setup.py  Dockerfile  Main.py  api_server.py  auth.py  autoRCA_Dashboard.html  autoRCA_Dashboard_DUPFIX.html  autorca_dashboard.html  autorca_livestream.HTML  autorca_livestream.html  autorca_login.html  autorca_register.html  config.yaml  conftest.py  dashboard.py  docker-compose.yml  extensions.json  index.html  init_db.py  log_parser.py  log_source_manager.py  log_uploader.py  mock_log_server.py  netlify.toml  pre-commit-config.yaml  pre_push_check.sh  push_to_grafana_cloud.py  pyproject.toml  pytest.ini  rca_report.txt  requirements.txt  ruff.toml  settings.json
.github/: .gitattributes  labeler.yml
.github/workflows/: ci.yml  nightly-security.yml  pr-gate.yml
Core/: ai_analyzer.py  github_integration.py  logger.py  rca_engine.py  reporter.py
Monitors/: api_monitor.py  db_validator.py  log_analyzer.py
pages/: 1_Log_source.py  2_RCA_dashboard.py  3_Log_explorer.py
tests/: conftest.py  test_ai_analyzer.py  test_api_contracts.py  test_api_monitor.py  test_auth.py  test_dashboard_features.py  test_db_validator.py  test_log_analyzer.py  test_rca_endpoints.py  test_rca_engine.py  test_rca_logic.js  test_rca_logic.py
