# pyproject.toml — linting, formatting, and package config for AutoRCA

[tool.ruff]
target-version = "py311"
line-length = 100
exclude = [
    ".git",
    "__pycache__",
    ".venv",
    "dist",
    "build",
]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "S",   # bandit security rules
    "N",   # pep8-naming
]
ignore = [
    "S101",  # allow assert in tests
    "B008",  # function call in default arg (FastAPI Depends pattern)
    "S104",  # allow 0.0.0.0 bind
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S", "N"]  # relax security + naming in tests

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
timeout = 30
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["."]
omit = ["tests/*", ".venv/*", "build/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
]
fail_under = 70

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "autorca"
version = "2.1.0"
description = "Automated Root Cause Analysis engine for log-based incident detection"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Nabeel Mohammed", email = "nabeel@example.com" }
]
keywords = ["rca", "observability", "incident-response", "log-analysis", "devops"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: System :: Monitoring",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
    "pyyaml>=6.0",
    "slowapi>=0.1.9",
    "groq>=0.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-asyncio>=0.23",
    "pytest-timeout>=2.3",
    "httpx>=0.27",
    "ruff>=0.4",
    "mypy>=1.10",
    "bandit>=1.7",
    "safety>=3.2",
]